--- a/Project.toml
+++ b/Project.toml
@@ -3,11 +3,17 @@ uuid = "5b45a83c-ea24-4d48-a31b-aaf72ae2b431"
 authors = ["Rose Nguyen"]
 version = "0.1.0"
 
+[deps]
+ForwardDiff = "f6369f11-7733-5829-9624-2563aa707210"
+
+
 [compat]
+ForwardDiff = "0.10"
 julia = "1"
 
 [extras]
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
+SafeTestsets = "1bc83da4-3b8d-516f-aca4-4fe02f6d838f"
 
 [targets]
-test = ["Test"]
+test = ["Test", "SafeTestsets"]
