--- a/Project.toml
+++ b/Project.toml
@@ -4,13 +4,16 @@ authors = ["Rose Nguyen"]
 version = "0.1.0"
 
 [deps]
-ForwardDiff = "f6369f11-7733-5829-9624-2563aa707210"
-RCall = "6f49c342-dc21-5d91-9882-a32aef131414"
+GLPK = "60bf3e95-4087-53dc-ae20-288a0d20c6a6"
+JuMP = "4076af6c-e467-56ae-b986-b466b2749572"
+Luxor = "ae8d54c2-7ccd-5906-9d76-62fc9837b5bc"
 SafeTestsets = "1bc83da4-3b8d-516f-aca4-4fe02f6d838f"
-StructuralCausalModels = "a41e6734-49ce-4065-8b83-aff084c01dfd"
+
 
 [compat]
-ForwardDiff = "0.10"
+Luxor = "2.15"
+JuMP = "0.21"
+GLPK = "0.14"
 julia = "1"
 
 [extras]
