--- a/Project.toml
+++ b/Project.toml
@@ -7,7 +7,7 @@ version = "0.1.1"
 GLPK = "60bf3e95-4087-53dc-ae20-288a0d20c6a6"
 JuMP = "4076af6c-e467-56ae-b986-b466b2749572"
 Luxor = "ae8d54c2-7ccd-5906-9d76-62fc9837b5bc"
-SafeTestsets = "1bc83da4-3b8d-516f-aca4-4fe02f6d838f"
+
 
 
 [compat]
@@ -17,8 +17,7 @@ GLPK = "0.14"
 julia = "1"
 
 [extras]
-SafeTestsets = "1bc83da4-3b8d-516f-aca4-4fe02f6d838f"
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
 
 [targets]
-test = ["Test", "SafeTestsets"]
+test = ["Test"]
